--- a/content/posts/2024-10-21-abnormal.md
+++ b/content/posts/2024-10-21-abnormal.md
@@ -4,7 +4,7 @@ date: "2024-10-21T04:05:06Z"
 feature-img: assets/img/background/rijksmuseum.jpg
 toc: true
 tags:
-- lang_ede
+- lang_de
 - media
 title: "Abnormal"
 ---
